--- a/second.html
+++ b/second.html
@@ -9,7 +9,9 @@
 <body>
     <div class="panels-container">
         <div class="panel left-panel">
-            <h2>Здесь могла бы быть Ваша реклама...</h2>
+            <h2>Huntlee</h2>
+            <p>Новый стандарт автоматизации рекрутмента</p>
+            <a href="https://huntlee.ru/" class="cyber-button">Узнать подробнее</a>
             <div class="push-all"></div>
             <h2>Назад в будущее</h2>
             <a href="first.html" class="cyber-button">Вернуться назад</a>
