--- a/first.html
+++ b/first.html
@@ -16,6 +16,7 @@
             <p>3. Посадить  сына  </p>
             <p class="push-down">Китайский ученый смог вывести формулу счастья и...</p>
             <a href="second.html" class="cyber-button">Узнать подробнее</a>
+            <a href="https://sekirodeathe.github.io/support/" class="cyber-button">Связаться с поддержкой</a>
         </div>
         <div class="panel middle-panel">
             <h2>Обо мне</h2>
